Final changes before resubmitting to PRD

--- a/refs.bib
+++ b/refs.bib
@@ -2058,3 +2058,74 @@ archivePrefix = {arXiv},
     pages = "012",
     year = "2021"
 }
+
+@article{Benetti:2021uea,
+    author = "Benetti, Micol and Graef, Leila Lobato and Vagnozzi, Sunny",
+    title = "{Primordial gravitational waves from NANOGrav: A broken power-law approach}",
+    eprint = "2111.04758",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.105.043520",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "4",
+    pages = "043520",
+    year = "2022"
+}
+
+@article{Vagnozzi:2020gtf,
+    author = "Vagnozzi, Sunny",
+    title = "{Implications of the NANOGrav results for inflation}",
+    eprint = "2009.13432",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1093/mnrasl/slaa203",
+    journal = "Mon. Not. Roy. Astron. Soc.",
+    volume = "502",
+    number = "1",
+    pages = "L11--L15",
+    year = "2021"
+}
+
+@article{Bian:2023dnv,
+    author = "Bian, Ligong and Ge, Shuailiang and Shu, Jing and Wang, Bo and Yang, Xing-Yu and Zong, Junchao",
+    title = "{Gravitational wave sources for pulsar timing arrays}",
+    eprint = "2307.02376",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    doi = "10.1103/PhysRevD.109.L101301",
+    journal = "Phys. Rev. D",
+    volume = "109",
+    number = "10",
+    pages = "L101301",
+    year = "2024"
+}
+
+@article{Figueroa:2023zhu,
+    author = "Figueroa, Daniel G. and Pieroni, Mauro and Ricciardone, Angelo and Simakachorn, Peera",
+    title = "{Cosmological Background Interpretation of Pulsar Timing Array Data}",
+    eprint = "2307.02399",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "CERN-TH-2023-132",
+    doi = "10.1103/PhysRevLett.132.171002",
+    journal = "Phys. Rev. Lett.",
+    volume = "132",
+    number = "17",
+    pages = "171002",
+    year = "2024"
+}
+
+@article{Vagnozzi:2022qmc,
+    author = "Vagnozzi, Sunny and Loeb, Abraham",
+    title = "{The Challenge of Ruling Out Inflation via the Primordial Graviton Background}",
+    eprint = "2208.14088",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.3847/2041-8213/ac9b0e",
+    journal = "Astrophys. J. Lett.",
+    volume = "939",
+    number = "2",
+    pages = "L22",
+    year = "2022"
+}
