Modified Figure 4 to now not include the sensitivity curve

--- a/MG.tex
+++ b/MG.tex
@@ -632,7 +632,7 @@ We note that if we still wish to conservatively respect the BBN bound in the sam
 
 \begin{figure}[ht]
     \includegraphics[width=\linewidth]{fig4.pdf}
-    \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the frequency range \red{from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim 1/(2\pi\tau_r)$ \cite{Fujita:2018ehq}).} The red, blue, green, purple, and golden curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The turquoise curve below the energy densities is the sensitivity curve for NG15. The blue-shaded region on the left is the excluded region from the CMB bound. The BBN bound region may be ignored if the graviton remains massive during BBN.} 
+    \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the frequency range \red{from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim 1/(2\pi\tau_r)$ \cite{Fujita:2018ehq}).} The red, blue, green, purple, and golden curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The blue-shaded region on the left is the excluded region from the CMB bound. The BBN bound region may be ignored if the graviton remains massive during BBN.} 
     \label{fig:supp}
 \end{figure}
 
@@ -641,7 +641,7 @@ In this paper, we discussed how the step function mass model of MG can reproduce
 
 \red{The values for $H_{\inf}$ we find that reproduce the SGWB are very low. Various models of inflation with sufficiently low $H_{\inf}$ have been proposed \cite{Nakayama:2011ri, Takahashi:2018tdu, Drees:2021wgd}. In models of inflation such as these, a significant blue-tilt is required to explain the SGWB, presenting a challenge to purely inflationary explanations \cite{Vagnozzi:2023lwo}. Additionally, the existence of the SGWB would most likely rule out standard inflationary models due to their dilution of the SGWB to an undetectable level \cite{Vagnozzi:2022qmc}. Thus, we can look to non-standard inflationary scenarios that include features like the breaking of the slow-roll consistency relation leading to the desired blue-tilted spectrum \cite{EPTA:2023xxk}, such as MTMG.}
 
-Observations of GWs have placed progressively tighter constraints on the possibility of gravitons with a very low but constant nonzero mass \cite{Bernardo:2023mxc, Wu:2023rib, Wang:2023div, deRham:2016nuf}, including much lower bounds with time-independent MTMG \cite{DeFelice:2021trp, DeFelice:2023bwq}. \red{In addition, these models of MG do not provide a sufficiently blue-tilted spectrum to explain the SGWB.} Therefore, the more plausible formulation of MG is the scenario in which the graviton mass is a function of time \red{and the graviton used to have a significant mass, in order to provide sufficient blue-tilt.} We have only considered a step function as the time-dependent function, but more complicated functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field. It may be fruitful to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time-dependent behavior beyond a step function.
+Observations of GWs have placed progressively tighter constraints on the possibility of gravitons with a very low but constant nonzero mass \cite{Bernardo:2023mxc, Wu:2023rib, Wang:2023div, deRham:2016nuf}, including much lower bounds with time-independent MTMG \cite{DeFelice:2021trp, DeFelice:2023bwq,}. \red{In addition, these models of MG do not provide a sufficiently blue-tilted spectrum to explain the SGWB.} Therefore, the more plausible formulation of MG is the scenario in which the graviton mass is a function of time \red{and the graviton used to have a significant mass, in order to provide sufficient blue-tilt.} We have only considered a step function as the time-dependent function, but more complicated functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field. It may be fruitful to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time-dependent behavior beyond a step function.
 
 Additionally, further observations that place constraints on the Hubble rate of expansion, the scale factor, and the time associated with inflation would be able to constrain the parameters of this theory. In addition to signals we have already observed with interferometers, we expect a more drastic suppression for higher frequencies than we discuss. Future work may investigate the nature of this suppression and propose plausible mechanisms for it.
 
