Corrected everything except for the references to be in line with the proof

--- a/refs.bib
+++ b/refs.bib
@@ -40,12 +40,16 @@
     year = "2012"
 }
 
-@misc{GH,
-    author = {Choi, Chris},
-    url = {https://github.com/ChrisChoi314/constrain_mass_nanograv_15},
-    howpublished = {\url{https://github.com/ChrisChoi314/constrain_mass_nanograv_15}},
-    year = {2023}
-}
+@software{Choi:2024,
+      author       = {Choi, Chris},
+      title        = {constrain\_mass\_nanograv\_15},
+      month        = aug,
+      year         = 2024,
+      publisher    = {Zenodo},
+      version      = {v1.0.0},
+      doi          = {10.5281/zenodo.13370372},
+      url          = {https://doi.org/10.5281/zenodo.13370372}
+    }
 
 @article{Afzal:2023,
     doi = {10.3847/2041-8213/acdc91},
@@ -2131,4 +2135,15 @@ archivePrefix = {arXiv},
     number = "2",
     pages = "L22",
     year = "2022"
+}
+
+@dataset{NANOGrav:2023,
+      author       = {The NANOGrav Collaboration},
+      title        = {The NANOGrav 15-Year Data Set},
+      month        = oct,
+      year         = 2023,
+      publisher    = {Zenodo},
+      version      = {2.0.0},
+      doi          = {10.5281/zenodo.8423265},
+      url          = {https://doi.org/10.5281/zenodo.8423265}
 }
