Fixed all of the references so they match the PRD version. And I mean ALL of them.

--- a/MG.tex
+++ b/MG.tex
@@ -1,4 +1,4 @@
-\documentclass[prd,twocolumn,aps,psfig,nofootinbib,nobibnotes,superscriptaddress,preprintnumbers,times]{revtex4-2}
+\documentclass[prd,twocolumn,aps,psfig,noeprint,nofootinbib,nobibnotes,superscriptaddress,preprintnumbers,times]{revtex4-2}
 \setlength{\topmargin}{-14mm}
 \usepackage{graphicx,bm,color,amsmath,amssymb, mathtools,subcaption}
 \usepackage[dvipsnames]{xcolor}
@@ -16,6 +16,7 @@
 \def\red{\textcolor{red}}
 \def\blue{\textcolor{blue}}
 \def\green{\textcolor{Green}}
+
 
 %|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 %             Customized Commands
