Added hyperlinks to institutions, added recieved and accepted dates, and more that I cannot remember

--- a/MG.tex
+++ b/MG.tex
@@ -443,25 +443,26 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \begin{document}
 
 \title{Stochastic gravitational wave background detection using NANOGrav 15-year data set in the context of massive gravity}
-\date{\today}
+\received{16 December 2023}
+\accepted{13 August 2024}
 \author{Chris~Choi\,\orcidlink{0009-0005-2328-3044}}
 \email{Contact author: minyeonc@andrew.cmu.edu}
-\affiliation{McWilliams Center for Cosmology and Astrophysics and Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
+\affiliation{McWilliams Center for Cosmology and Astrophysics and Department of Physics, \href{https://ror.org/05x2bcf33}{Carnegie Mellon University}, Pittsburgh, PA 15213, USA}
 
 \author{Jacob~Magallanes\,\orcidlink{0009-0004-0616-146X}}
 \email{Contact author: jmagalla@andrew.cmu.edu}
-\affiliation{McWilliams Center for Cosmology and Astrophysics and Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
+\affiliation{McWilliams Center for Cosmology and Astrophysics and Department of Physics, \href{https://ror.org/05x2bcf33}{Carnegie Mellon University}, Pittsburgh, PA 15213, USA}
 
 \author{Murman~Gurgenidze}
 \email{Contact author: mgurgeni@andrew.cmu.edu}
-\affiliation{McWilliams Center for Cosmology and Astrophysics and Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
-\affiliation{School of Natural Sciences and Medicine, Ilia State University, 0194 Tbilisi, Georgia}
+\affiliation{McWilliams Center for Cosmology and Astrophysics and Department of Physics, \href{https://ror.org/05x2bcf33}{Carnegie Mellon University}, Pittsburgh, PA 15213, USA}
+\affiliation{School of Natural Sciences and Medicine, \href{https://ror.org/051qn8h41}{Ilia State University}, 0194 Tbilisi, Georgia}
 
 \author{Tina~Kahniashvili\,\orcidlink{0000-0003-0217-9852}}
 \email{Contact author: tinatin@andrew.cmu.edu}
-\affiliation{McWilliams Center for Cosmology and Astrophysics and Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
-\affiliation{School of Natural Sciences and Medicine, Ilia State University, 0194 Tbilisi, Georgia}
-\affiliation{Abastumani Astrophysical Observatory, Tbilisi, GE-0179, Georgia}
+\affiliation{McWilliams Center for Cosmology and Astrophysics and Department of Physics, \href{https://ror.org/05x2bcf33}{Carnegie Mellon University}, Pittsburgh, PA 15213, USA}
+\affiliation{School of Natural Sciences and Medicine, \href{https://ror.org/051qn8h41}{Ilia State University}, 0194 Tbilisi, Georgia}
+\affiliation{\href{https://ror.org/02gkgrd84}{Abastumani Astrophysical Observatory}, Tbilisi, GE-0179, Georgia}
 
 \begin{abstract}
 Convincing evidence of a stochastic gravitational wave (GW) background has been found by the NANOGrav Collaboration in the 15-year data set. From this signal, we can evaluate the possibility of its source being from the early Universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time-dependent model of the minimal theory of massive gravity and find values of the graviton mass, mass cutoff time, and Hubble rate of inflation that amplify the energy spectra of primordial GWs sufficiently to reproduce the signal from the NANOGrav data within 1-3 standard deviation. However, a suppression mechanism for high-frequency modes must be introduced to conservatively obey the big bang nucleosynthesis (BBN) bound. While there are regions of the parameter space that reproduce the signal, it remains a challenge to simultaneously respect the BBN and cosmic microwave background bounds without making the graviton mass cutoff time too deep into the matter-dominated era.
